tests/rosetta/out/C/csv-to-html-translation-5.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:59:38Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:59:38Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
list_string split(char *s, char *sep) {
  list_string out = list_string_create(0);
  int start = 0;
  int i = 0;
  int n = strlen(sep);
  while (i <= strlen(s) - n) {
    if (slice_string(s, i, i + n) == sep) {
      list_string tmp1 = list_string_create(1);
      tmp1.data[0] = slice_string(s, start, i);
      list_string tmp2 = concat_list_string(out, tmp1);
      out = tmp2;
      i = i + n;
      start = i;
    } else {
      i = i + 1;
    }
  }
  list_string tmp3 = list_string_create(1);
  tmp3.data[0] = slice_string(s, start, strlen(s));
  list_string tmp4 = concat_list_string(out, tmp3);
  out = tmp4;
  return out;
}

char *htmlEscape(char *s) {
  char *out = "";
  int i = 0;
  while (i < strlen(s)) {
    char *ch = slice_string(s, i, i + 1);
    if ((strcmp(ch, "&") == 0)) {
      char *tmp5 = concat_string(out, "&amp;");
      out = tmp5;
    } else if ((strcmp(ch, "<") == 0)) {
      char *tmp6 = concat_string(out, "&lt;");
      out = tmp6;
    } else if ((strcmp(ch, ">") == 0)) {
      char *tmp7 = concat_string(out, "&gt;");
      out = tmp7;
    } else {
      char *tmp8 = concat_string(out, ch);
      out = tmp8;
    }
    i = i + 1;
  }
  return out;
}

int _mochi_main() {
  char *tmp9 =
      concat_string("Character,Speech\n",
                    "The multitude,The messiah! Show us the messiah!\n");
  char *tmp10 = concat_string(
      tmp9, "Brians mother,<angry>Now you listen here! He's not the messiah; "
            "he's a very naughty boy! Now go away!</angry>\n");
  char *tmp11 = concat_string(tmp10, "The multitude,Who are you?\n");
  char *tmp12 =
      concat_string(tmp11, "Brians mother,I'm his mother; that's who!\n");
  char *tmp13 = concat_string(
      tmp12, "The multitude,Behold his mother! Behold his mother!");
  char *c = tmp13;
  for (int tmp14 = 0; tmp14 < split(c, "\n").len; tmp14++) {
    char *line = split(c, "\n").data[tmp14];
    rows = 0;
  }
  printf("<table>\n");
  for (int tmp15 = 0; tmp15 < rows.len; tmp15++) {
    list_string row = rows.data[tmp15];
    char *cells = "";
    for (int tmp16 = 0; tmp16 < row.len; tmp16++) {
      char *cell = row.data[tmp16];
      char *tmp17 = concat_string(cells, "<td>");
      cells = tmp17 + htmlEscape(cell) + "</td>";
    }
    char *tmp18 = concat_string("    <tr>", cells);
    char *tmp19 = concat_string(tmp18, "</tr>");
    printf("%s\n", tmp19);
  }
  printf("</table>\n");
  return 0;
}
int main() { return _mochi_main(); }
